--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "expo": "^20.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-20.0.0.tar.gz",
-    "react-native-elements": "^0.17.0"
+    "react-native-elements": "^0.17.0",
+    "react-native-vector-icons": "^4.4.0"
   }
 }
