--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-20.0.0.tar.gz",
     "react-native-elements": "^0.17.0",
     "react-native-vector-icons": "^4.4.0"
+  },
+  "devDependencies": {
+    "eslint-config-rallycoding": "^3.2.0"
   }
 }
